# wholesomeBot-API

./: .travis.yml  Procfile  README.md  api.json  api.py  deploy.cmd  push.cmd  pyproject.toml  requirements.txt  test.py
.github/workflows/: codeql-analysis.yml
