[tool.poetry]
name = "wholesomebot-api"
version = "1.0.0"
description = "API for wholesomeBot Discord"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
fastapi = "^0.68.2"
h11 = "^0.13.0"
pydantic = "^1.9.0"
starlette = "^0.14.2"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
